# nytbee_scrapper

./: .gitattributes  .gitignore  .replit  AGENTS.md  README.md  Spelling Bee Answers.webarchive  nytbee_dict.txt  nytbee_solver.ipynb  pyproject.toml  replit.md  scrape_nytbee.ipynb  scrape_nytbee.py  test_get_todays_puzzle_letters.ipynb
.github/workflows/: codex-automerge.yml  daily-spelling-bee.yml
docs/: encoding_samples.md  terminator_compression.md
results/: 2026-02-08.txt  2026-02-09.encoded.txt  2026-02-09.txt  2026-02-11.encoded.txt  2026-02-11.txt  2026-02-12.encoded.txt  2026-02-12.txt  2026-02-13.encoded.txt  2026-02-13.txt  2026-02-14.encoded.txt  2026-02-14.txt  2026-02-15.encoded.txt  2026-02-15.txt  2026-02-16.encoded.txt  2026-02-16.txt  2026-02-17.encoded.txt  2026-02-17.txt  2026-02-18.encoded.txt  2026-02-18.txt  2026-02-19.encoded.txt  2026-02-19.txt  2026-02-20.encoded.txt  2026-02-20.txt  2026-02-21.encoded.txt  2026-02-21.txt  2026-02-22.encoded.txt  2026-02-22.txt  2026-02-23.encoded.txt  2026-02-23.txt  2026-02-24.encoded.txt  2026-02-24.txt  2026-02-25.encoded.txt  2026-02-25.txt  2026-02-26.encoded.txt  2026-02-26.txt  2026-02-27.encoded.txt  2026-02-27.txt  2026-02-28.encoded.txt  2026-02-28.txt  2026-03-01.encoded.txt  (+261 more)
safari-extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
shortcuts/: nytbee-autotype-shortcut.js  nytbee-encoded-autotype-bookmarklet.js  nytbee-gamedata-bookmarklet.js
src/nytbee_scrapper/: __init__.py  cli.py  scraper.py
src/nytbee_solver/: __init__.py  cli.py  encoding.py  publish.py  (+1 more)
test/: __init__.py  test_encoding.py  test_scraper.py  test_solver.py
