[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nytbee-scrapper"
version = "0.2.0"
description = "Solver and scraper utilities for the NYT Spelling Bee"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "nytbee_scrapper contributors"}]

[project.urls]
Homepage = "https://github.com/fptprdqs66-dot/nytbee_scrapper"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
