[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nytbee-scrapper"
version = "0.1.0"
description = "Scraper utilities for NYT Spelling Bee answer lists"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "nytbee_scrapper contributors"}]

[project.urls]
Homepage = "https://github.com/fptprdqs66-dot/nytbee_scrapper"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
